separating out into components

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Create a React web app that uses Mapbox GL JS to render a map"
     />
     <title>Use Mapbox GL JS in a React app</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
